<resources>
    <string name="app_name">JustATimerAndCounter</string>
    <string name="title_string">This is just a Counter and a Timer.</string>
    <string name="counter_button">Counter</string>
    <string name="timer_text">Timer</string>
    <string name="zero_string">0</string>
    <string name="count_increase">Increase</string>
    <string name="zero_time">00:00:00</string>
    <string name="start_timer">Start</string>
    <string name="about_string">Put something clever here in the future..</string>
    <string name="title_fragment_header">A Simple Counter/Timer</string>
    <string name="counter_fragment_header">Counter</string>
    <string name="timer_fragment_header">Timer</string>
    <string name="about_fragment_header">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_menu_string">About</string>
    <string name="decrement_string">Decrement</string>
    <string name="reset_string">Reset</string>
</resources>
