<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="NavGraph"
    app:startDestination="@id/titleFragment">
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.justatimerandcounter.TitleFragment"
        android:label="@string/title_fragment_header"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_timerFragment"
            app:destination="@id/timerFragment" />
        <action
            android:id="@+id/action_titleFragment_to_counterFragment"
            app:destination="@id/counterFragment" />
    </fragment>
    <fragment
        android:id="@+id/timerFragment"
        android:name="com.example.justatimerandcounter.TimerFragment"
        android:label="@string/timer_fragment_header"
        tools:layout="@layout/fragment_timer" />
    <fragment
        android:id="@+id/counterFragment"
        android:name="com.example.justatimerandcounter.CounterFragment"
        android:label="@string/counter_fragment_header"
        tools:layout="@layout/fragment_counter" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.justatimerandcounter.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>